--- a/monzzle3.0/css/monster.css
+++ b/monzzle3.0/css/monster.css
@@ -84,11 +84,14 @@ section {
     font-size: var(--banner-p);
 }
 
+.s-scroll{
+    /* overflow-x: hidden; */
+}
+
 .scroll-content {
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow-x: hidden;
 }
 
 .scroll-list {
