--- a/monzzle3.0/css/base.css
+++ b/monzzle3.0/css/base.css
@@ -451,6 +451,95 @@ section {
     justify-content: center;
     align-items: center;
     display: none;
+    width: 100%;
+    height: 100vh;
+}
+
+.m-navs {
+    background: #fff;
+    border-radius: 20px;
+    box-shadow: 4px 4px 7px 7px #2548209a;
+    padding: 15vh 25vw;
+    display: flex;
+    /* min-height: 60vh; */
+    /* min-width: 50vw; */
+}
+
+@media (max-width:800px) {
+    .m-navs {
+        padding: 15vh 20vw;
+        /* min-height: 60vh; */
+        /* min-width: 80vw; */
+        display: flex;
+        justify-content: space-around;
+        align-items: flex-start;
+    }
+}
+
+.left-nav,
+.right-nav {
+    font-size: var(--big-p);
+    letter-spacing: 2px;
+    color: #513A35;
+    font-weight: 700;
+    margin: 20px 0;
+    cursor: pointer;
+    text-align: justify;
+    width: 100%;
+    height: var(--height);
+}
+
+.right-nav {
+    color: #a8877d;
+}
+
+.left-nav:hover, .right-nav:hover {
+    color: #513A35 !important;
+}
+
+.left-nav::after,
+.right-nav::after {
+    content: "";
+    display: inline-block;
+    width: 100%;
+}
+
+.btn-content {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.btn-content i {
+    font-size: var(--big-p);
+    transform: translateX(-100%) translateY(150%);
+    cursor: pointer;
+    padding: 20px;
+    transition: 0.3s;
+}
+
+.btn-content i:hover {
+    transform: translateX(-100%) translateY(150%) scale(1.3);
+}
+
+.good,
+.bad {
+    margin-left: 50px;
+    z-index: 200;
+}
+
+.good,
+.bad {
+    display: none;
+}
+
+
+/* .navigation {
+    position: absolute;
+    z-index: 2000;
+    background: rgba(255, 255, 255, 0.5);
+    justify-content: center;
+    align-items: center;
+    display: none;
 }
 
 .m-navs {
@@ -528,7 +617,7 @@ section {
 .good,
 .bad {
     display: none;
-}
+} */
 
 
 
