--- a/monzzle3.0/css/test.css
+++ b/monzzle3.0/css/test.css
@@ -148,6 +148,17 @@
     background-image: url(../resource/portrait/3.jpg);
 }
 
+@media (max-width:800px) {
+    .left{
+        width: 45%;
+    }
+
+    .left-imgs{
+        width: 85%;
+        height: 55vh;
+    }
+}
+
 .right {
     width: var(--right-width);
     height: 100%;
@@ -184,6 +195,17 @@
     background-image: url(../resource/portrait/6.jpg);
 }
 
+@media (max-width:800px) {
+    .right{
+        width: 50%;
+    }
+
+    .right-imgs{
+        height: 28vh;
+        width: 50%;
+    }
+}
+
 .right-text {
     /* width: 100%; */
     height: 300px;
@@ -194,6 +216,10 @@
     align-items: center;
     /* background: #353254; */
     font-size: var(--big-p);
+}
+
+@media (max-width:800px) {
+    
 }
 
 .pre {
