--- a/monzzle3.0/css/subject.css
+++ b/monzzle3.0/css/subject.css
@@ -1,69 +1,616 @@
-/* s-banner */
-.title-text h1 {
-    letter-spacing: 25px;
+:root {
+    --sec-title: 3rem;
+    --sec-p: 1.3rem;
+    --big-title: 8rem;
+    --big-p: 2rem;
+    --height: 45px;
+    --header-height: 150px;
+    --right-width: 400px;
+    --left-padding-right: 80px;
+    --member-padding: 200px;
+    --big-p-height: 1.6em;
+    --member-child-padding: 150px;
+    --member-left-transform: 50px;
 }
 
-@media (max-width:750px) {
-    .title-text h1 {
-        letter-spacing: 10px;
-    }
-
-    .title-text h1 {
-        margin-top: -10px;
-    }
-
-    .title-content {
-        padding: 0 0 0 10vw;
+@media (max-width:1400px) {
+    :root {
+        --member-padding: 120px;
     }
 }
 
-@keyframes effect {
+
+@media (max-width:1200px) {
+    :root {
+        --sec-title: 2.5rem;
+        --sec-p: 1.2rem;
+        --gary-p: 0.9rem;
+        --big-title: 6rem;
+        --big-p: 1.7rem;
+        --height: 39px;
+        --member-padding: 100px;
+        --member-child-padding: 120px;
+    }
+}
+
+@media (max-width:1000px) {
+    :root {
+        --sec-title: 2rem;
+        --sec-p: 1.1rem;
+        --gary-p: 0.8rem;
+        --big-title: 6.5rem;
+        --big-p: 1.5rem;
+        --lorem-p: 1.5em;
+        --height: 33px;
+        --member-padding: 80px;
+        --member-child-padding: 100px;
+    }
+}
+
+@media (max-width:800px) {
+    :root {
+        --sec-title: 1.5rem;
+        --sec-p: 1rem;
+        --gary-p: 0.6rem;
+        --big-title: 3rem;
+        --big-p: 1.2rem;
+        --height: 27px;
+        --member-padding: 50px;
+        --member-padding: 10%;
+        --member-child-padding: 0px;
+        --member-left-transform: 0px;
+    }
+}
+
+@media (max-width:500px) {
+    :root {
+        --big-p: 1.1rem;
+    }
+}
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+/* header */
+/* header {
+    width: 100%;
+    height: var(--header-height);
+    padding: 0 70px;
+    background: #fff;
+    position: fixed;
+    left: 0;
+    right: 0;
+    z-index: 99999;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header-left {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.logo {
+    background: #367841;
+    width: 150px;
+    height: 40px;
+}
+
+.navs {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.nav {
+    width: 100px;
+    height: 30px;
+    background: #835479;
+} */
+
+/* banner */
+.s-aa {
+    width: 100%;
+    /* height: 100vh; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+.left {
+    width: calc(100% - var(--right-width) - var(--left-padding-right));
+    height: calc(100vh - var(--header-height));
+    padding-top: var(--header-height);
+    padding-right: var(--left-padding-right);
+    /* background: #666; */
+}
+
+.left-imgs {
+    width: calc(100% - var(--right-width) - var(--left-padding-right));
+    height: calc(100vh - var(--header-height));
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    overflow: hidden;
+    border-radius: 0 80px 0 0;
+}
+
+.left-img {
+    position: absolute;
+    width: 100%;
+    height: 30%;
+    z-index: 9;
+    left: 0;
+    bottom: 0;
+    background-image: url(../resource/portrait/0.jpg);
+    background-size: cover;
+    background-position: 50% 50%;
+    transition: 1s ease-in-out;
+    opacity: 0;
+}
+
+.left-img2 {
+    background-image: url(../resource/portrait/2.jpg);
+}
+
+.left-img3 {
+    background-image: url(../resource/portrait/3.jpg);
+}
+
+@media (max-width:600px) {
+    .left {
+        width: 45%;
+    }
+
+    .left-imgs {
+        width: 90%;
+        height: 55vh;
+        border-radius: 0 30px 0 0;
+    }
+}
+
+.right {
+    width: var(--right-width);
+    height: 100%;
+    /* background: #999; */
+}
+
+.right-imgs {
+    width: var(--right-width);
+    height: calc(100vh - 300px);
+    position: absolute;
+    top: 0;
+    right: 0;
+    overflow: hidden;
+    border-radius: 0 0 0 80px;
+}
+
+.right-img {
+    position: absolute;
+    z-index: 9;
+    width: 100%;
+    height: 30%;
+    background-image: url(../resource/portrait/4.jpg);
+    background-size: cover;
+    background-position: 50% 50%;
+    transition: 1s ease-in-out;
+    opacity: 0;
+}
+
+.right-img2 {
+    background-image: url(../resource/portrait/5.jpg);
+}
+
+.right-img3 {
+    background-image: url(../resource/portrait/6.jpg);
+}
+
+@media (max-width:600px) {
+    .right {
+        width: 50%;
+    }
+
+    .right-imgs {
+        height: 40vw;
+        max-height: 35vh;
+        width: 40%;
+        border-radius: 0 0 0 30px;
+    }
+}
+
+.right-text {
+    /* width: 100%; */
+    height: 300px;
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    /* background: #353254; */
+    font-size: var(--big-p);
+}
+
+@media (max-width:600px) {
+    .right-text {
+        top: calc(28vh - 60px);
+        height: 200px;
+        left: 0;
+        padding: 20px;
+    }
+}
+
+.pre {
+    z-index: 10;
+}
+
+.rightshow {
+    height: 100%;
+    opacity: 1;
+}
+
+.leftshow {
+    height: 100%;
+    opacity: 1;
+}
+
+.big-left {
+    animation: bigger 9s;
+}
+
+@keyframes bigger {
+    0% {
+        transform: scale(1);
+        background-position: 50% 50%;
+    }
+
+    60% {
+        transform: scale(1.03);
+        background-position: 50% 46%;
+    }
+
+    100% {
+        transform: scale(1.04);
+        background-position: 50% 44%;
+    }
+}
+
+.big-right {
+    animation: biggerr 8s;
+}
+
+@keyframes biggerr {
+    0% {
+        transform: scale(1);
+        background-position: 50% 50%;
+    }
+
+    60% {
+        transform: scale(1.1);
+        background-position: 50% 54%;
+    }
+
+    100% {
+        transform: scale(1.12);
+        background-position: 50% 56%;
+    }
+}
+
+.s-member {
+    /* min-height: 100vh; */
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.team-content {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    padding: 8vh var(--member-padding) 8vh var(--member-padding);
+}
+
+.team-list {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    font-size: var(--sec-p);
+}
+
+.list-right {
+    margin-left: 20px;
+}
+
+
+@media (max-width:600px) {
+    .team-content {
+        flex-wrap: wrap;
+    }
+
+    .team-list:not(:first-child) {
+        display: none;
+    }
+
+    .team-list {
+        display: block;
+    }
+
+    .list-right {
+        margin-left: 0;
+    }
+
+    .team-left {
+        width: 100%;
+    }
+
+    .team-right {
+        width: 100%;
+        display: flex;
+        justify-content: flex-end;
+    }
+}
+
+.waviy {
+    font-size: 1em;
+    cursor: pointer;
+}
+
+@media (min-width:600px) {
+    .waviy {
+        -webkit-box-reflect: below -10px linear-gradient(transparent, rgba(0, 0, 0, .2));
+    }
+}
+
+@media (max-width:600px) {
+    .waviy {
+        padding: 30px 0;
+    }
+}
+
+.waviy span {
+    display: inline-block;
+    text-transform: uppercase;
+    animation: waviy 2.8s infinite;
+    animation-delay: calc(.4s * var(--i));
+}
+
+@keyframes waviy {
 
     0%,
-    20%,
-    100% {
-        filter: blur(0px);
-        opacity: 1;
-    }
-
     40%,
-    80% {
-        filter: blur(16px);
-        opacity: 0;
+    100% {
+        transform: translateY(0)
+    }
+
+    20% {
+        transform: translateY(-10px)
     }
 }
 
-/* s-60-40 , s-40-60 */
-.s-60-40,
-.s-40-60 {
-    margin-top: 0;
+.members-content {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.section-40 {
-    /* padding: 0 20px; */
+.member-left h1 {
+    font-size: var(--big-p);
+    line-height: var(--big-p-height);
 }
 
-.s-60-40 .section-40 {
-    background: #9ECABF;
-    /* border-top: #513A35 15vh solid; */
-    /* border-bottom: #513A35 15vh solid; */
+.member-left p {
+    font-size: var(--sec-p);
 }
 
-.s-40-60 .section-40 {
-    background: #a8877d;
-    /* border-top: #513A35 15vh solid; */
-    /* border-bottom: #513A35 15vh solid; */
+
+.member-left {
+    width: calc(40% - var(--member-padding));
+    padding-left: var(--member-padding);
+    position: relative;
+    z-index: 200;
+    transform: translateY(var(--member-left-transform));
 }
 
-/*subject*/
-.content-text p::after {
-    content: 'Click　→';
+.member-right {
+    width: calc(80% - var(--member-padding));
+    margin-left: -20%;
+    background: #ede9e0;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 20vh var(--member-padding) 10vh 0;
+    border-top-left-radius: 60px;
 }
 
-.content-text p::before {
-    content: 'Click　　';
+.member-right-img {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 }
 
-.s-paragraph a {
-    color: #000;
+.member-right-img img {
+    border-radius: 50px;
+    width: 70%;
+}
+
+@media (max-width:1200px) {
+    .member-right-img img {
+        width: 70%;
+    }
+}
+
+@media (max-width:1000px) {
+    .member-right-img img {
+        width: 70%;
+    }
+}
+
+
+@media (max-width:800px) {
+    .members-content {
+        -webkit-flex-flow: column-reverse;
+        flex-flow: column-reverse;
+        display: -webkit-box;
+        display: -moz-box;
+        display: -ms-flexbox;
+        display: -webkit-flex;
+        display: flex;
+        padding-top: 10vh;
+    }
+
+    .member-right {
+        width: 100%;
+        margin: 0;
+        justify-content: center;
+        padding: 0;
+        border-radius: 0;
+    }
+
+    .member-right-img {
+        justify-content: center;
+        margin-top: -10vh;
+        width: 100%;
+        padding: 0 10%;
+    }
+
+    .member-right-img img {
+        width: 100%;
+        border-radius: 40px;
+    }
+
+    .member-left {
+        background: #ede9e0;
+        width: 80%;
+        padding: 10vh 10%;
+        margin: 0;
+    }
+}
+
+@media (max-width:600px) {
+    .members-content {
+        padding-top: 5vh;
+    }
+}
+
+
+/* 右邊 */
+.members-content2, .members {
+    /* min-height: 100vh; */
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 100px;
+    position: relative;
+}
+
+.members{
+    z-index: 10;
+}
+
+.members-bg {
+    background: #ede9e0;
+    width: 80%;
+    margin-left: -80%;
+    border-bottom-left-radius: 150px;
+}
+
+
+.member-right2 h1 {
+    font-size: var(--big-p);
+    line-height: var(--big-p-height);
+}
+
+.member-right2 p {
+    font-size: var(--sec-p);
+}
+
+
+.member-right2 {
+    width: calc(40% - var(--member-padding));
+    padding-right: var(--member-padding);
+    position: relative;
+    z-index: 200;
+    transform: translateY(var(--member-left-transform));
+}
+
+.member-left2 {
+    width: calc(80% - var(--member-padding));
+    margin-left: -23%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 10vh 0 10vh var(--member-padding);
+    border-top-left-radius: 60px;
+    margin-right: 3%;
+}
+
+.member-left2-img {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.member-left2-img img {
+    border-radius: 50px;
+    width: 70%;
+}
+
+@media (max-width:1200px) {
+    .member-left2-img img {
+        width: 70%;
+    }
+}
+
+@media (max-width:1000px) {
+    .member-left2-img img {
+        width: 70%;
+    }
+}
+
+
+@media (max-width:800px) {
+    .members-content2,.members {
+        flex-wrap: wrap;
+        background-color: #ede9e0;
+        padding: 0;
+    }
+
+    .member-left2 {
+        width: 100%;
+        margin: 0;
+        justify-content: center;
+        padding: 0;
+        border-radius: 0;
+    }
+
+    .member-left2-img {
+        justify-content: center;
+        width: 100%;
+        padding: 0 10%;
+    }
+
+    .member-left2-img img {
+        width: 100%;
+        border-radius: 40px;
+    }
+
+    .member-right2 {
+        background: #ede9e0;
+        width: 80%;
+        padding: 10vh 10%;
+        margin: 0;
+    }
+
+    .members-bg {
+        display: none;
+    }
 }
