--- a/monzzle3.0/css/about.css
+++ b/monzzle3.0/css/about.css
@@ -316,6 +316,7 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    overflow-x: hidden;
 }
 
 .team-content {
@@ -324,6 +325,7 @@
     justify-content: space-between;
     align-items: flex-end;
     padding: 8vh var(--member-padding) 8vh var(--member-padding);
+    overflow-x: hidden;
 }
 
 .team-list {
@@ -408,6 +410,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    overflow-x: hidden;
 }
 
 .member-left h1 {
@@ -516,6 +519,7 @@
     justify-content: center;
     align-items: center;
     padding-bottom: 100px;
+    overflow-x: hidden;
 }
 
 .members {
