--- a/monzzle3.0/css/monster.css
+++ b/monzzle3.0/css/monster.css
@@ -289,3 +289,47 @@ section {
 .bad {
     display: none;
 }
+
+footer {
+    background: #513A35;
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+    padding: 10vh 5%;
+}
+
+.footer-left a {
+    font-size: var(--sec-p);
+    color: #fff;
+    display: block;
+    line-height: var(--sec-title);
+}
+
+.footer-right {
+    color: #fff;
+    line-height: var(--big-p);
+}
+
+.copyright {
+    background: #513A35;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding-right: 40px;
+    color: #fff;
+}
+
+@media (max-width:600px) {
+    footer {
+        display: block;
+        padding: 5vh 10%;
+    }
+
+    .footer-right {
+        margin-top: 30px;
+    }
+
+    .footer-info {
+        display: flex;
+    }
+}
