--- a/monzzle/css/about.css
+++ b/monzzle/css/about.css
@@ -805,7 +805,7 @@ footer {
     align-items: center;
     justify-content: flex-end;
     padding-right: 40px;
-    transform: translateY(-100%);
+    padding-bottom: 40px;
     color: #fff;
 }
 
