--- a/monzzle/css/monster.css
+++ b/monzzle/css/monster.css
@@ -316,6 +316,7 @@ footer {
     align-items: center;
     justify-content: flex-end;
     padding-right: 40px;
+    padding-bottom: 40px;
     color: #fff;
 }
 
