--- a/monzzle/css/subject.css
+++ b/monzzle/css/subject.css
@@ -228,8 +228,8 @@
     z-index: 9;
     width: 100%;
     height: 30%;
+    background-size: cover;
     background-image: url(../resource/subject/fish.jpg);
-    background-size: contain;
     background-repeat: no-repeat;
     background-position: top center;
     transition: 1s ease-in-out;
