--- a/lee/css/artist.css
+++ b/lee/css/artist.css
@@ -1,10 +1,8 @@
-.right{
+.right {
     background: #DCDDDD;
-}
-
-.section-1{
-    width: 100%;
-    min-height: 100vh;
+    width: calc(100% - var(--left-width) - var(--left-width));
+    padding-left: var(--left-width);
+    padding-top: var(--left-width);
 }
 
 .sec-title div span:nth-child(1) {
@@ -21,4 +19,207 @@
     font-size: var(--header-second-font);
     color: #231815;
     font-family: 'Great Vibes';
+}
+
+.section-1 {
+    width: 100%;
+}
+
+.header-title{
+    width: 100%;
+}
+
+.header-title div span:nth-child(1) {
+    font-size: var(--header-big-font);
+    color: #231815;
+}
+
+.header-title div span:nth-child(3) {
+    font-size: var(--header-big-font);
+    color: #9A6A25;
+}
+
+.header-title div span:nth-child(5) {
+    font-size: var(--header-second-font);
+    color: #231815;
+    font-family: 'Great Vibes';
+}
+
+.section-top {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+@media (max-width:900px) {
+    .section-top {
+        display: flex;
+        flex-wrap: wrap;
+        -webkit-flex-flow: column-reverse;
+        flex-flow: column-reverse;
+        display: -webkit-box;
+        display: -moz-box;
+        display: -ms-flexbox;
+        display: -webkit-flex;
+    }
+}
+
+.section-left {
+    width: 30%;
+    transform: translateY(50px);
+}
+
+@media (max-width:900px) {
+    .section-left {
+        width: 100%;
+        transform: translateY(0);
+    }
+}
+
+.section-left div:nth-child(1) {
+    font-size: var(--section-title);
+}
+
+.section-left div:nth-child(2) {
+    font-size: var(--section-second-title);
+    color: #898989;
+}
+
+.section-right {
+    width: 70%;
+    height: 30vw;
+}
+
+@media (max-width:900px) {
+    .section-right {
+        width: 100%;
+        height: 40vw;
+    }
+}
+
+.section-top img {
+    width: 100%;
+    height: 100%;
+}
+
+.section-bottom {
+    padding: calc(var(--left-width) * 1) calc(var(--left-width) * 1) calc(var(--left-width) * 1) 0;
+    font-size: var(--content-text);
+    line-height: 1.8em;
+    letter-spacing: 2px;
+}
+
+
+.section-2 {
+    background: #fff;
+    /* height: calc(100vh - var(--left-width)); */
+    position: relative;
+    padding-right: var(--left-width);
+}
+
+.section-title {
+    width: 100%;
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    padding-top: var(--left-width);
+}
+
+.section-title-line {
+    width: 80px;
+    height: 2px;
+    background: #3E3A39;
+}
+
+.section-title-text {
+    color: #3E3A39;
+    font-size: var(--section-title);
+}
+
+.section-title-second-text {
+    color: #898989;
+    font-size: var(--section-second-title);
+}
+
+.section-content-1{
+    padding: var(--left-width) 0 var(--left-width) var(--left-width);
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.section-left-1{
+    width: 35%;
+    height: 100%;
+    /* display: flex; */
+    /* justify-content: center; */
+    /* align-items: center; */
+}
+
+.section-left-1 div:nth-child(1){
+    font-size: var(--section-title);
+    transform: translateX(50%);
+    color: #3E3A39;
+}
+.section-left-1 div:nth-child(2){
+    font-size: var(--section-second-title);
+    color: #3E3A39;
+}
+.section-left-1 div:nth-child(3){
+    font-size: var(--section-title);
+    color: #3E3A39;
+}
+
+.section-left-1 div:nth-child(3) div{
+    font-size: var(--section-second-title);
+    color: #3E3A39;
+}
+
+.section-right-1{
+    width: 65%;
+}
+
+.section-right-1 img{
+    width: 100%;
+}
+
+.section-content-2{
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+.section-left-2{
+    width: 50%;
+    padding-right: calc(var(--left-width) / 3);
+}
+
+.section-left-2 .section-title{
+    padding: calc(var(--left-width) / 3) 0;
+}
+.section-left-2 .section-title .section-title-second-text{
+    font-size: var(--content-text);
+    color: #231815;
+}
+
+.section-left-content{
+    font-size: var(--content-text);
+    color: #231815;
+    margin-left: calc(var(--left-width) - 10px);
+    margin-bottom: var(--left-width);
+}
+.section-right-2{
+    width: 50%;
+    background: #DCDDDD;
+    padding: calc(var(--left-width) / 3);
+}
+
+.section-right-text{
+    font-size: var(--content-text);
+}
+
+.section-right-text div span{
+    opacity: 0;
 }
